--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "db:stop": "npx supabase stop",
     "db:restart": "yarn db:stop && yarn db:start",
     "db:test": "yarn db:start && npx supabase db test",
-    "db:reset": "npx supabase db reset"
+    "db:reset": "npx supabase db reset",
+    "edge:start": "yarn db:start && nohup npx supabase functions serve > logs/nohup.out 2>&1 &",
+    "edge:status": "echo 'Edge Runtime Status:' && (npx supabase status | grep 'edge_runtime') || echo 'Edge Functions are not running'",
+    "edge:logs": "tail -f logs/nohup.out",
+    "edge:stop": "pkill -f 'supabase functions serve' || echo 'No edge functions running'"
   },
   "repository": {
     "type": "git",
@@ -35,6 +39,7 @@
   },
   "devDependencies": {
     "@supabase/supabase-js": "^2.47.10",
+    "deno": "^2.1.4",
     "dotenv": "^16.4.7",
     "dotenv-cli": "^8.0.0",
     "vitest": "^2.1.8"
