--- a/package.json
+++ b/package.json
@@ -4,17 +4,11 @@
   "description": "Supabase Edge Function serving almost guaranteed fresh images from CivitAI",
   "main": "index.js",
   "scripts": {
-    "test": "npx dotenv -- vitest run supabase/tests/",
-    "test:watch": "npx dotenv -- vitest watch supabase/tests/",
     "db:start": "npx supabase start",
     "db:stop": "npx supabase stop",
-    "db:restart": "yarn db:stop && yarn db:start",
-    "db:test": "yarn db:start && npx supabase db test",
     "db:reset": "npx supabase db reset",
-    "edge:start": "mkdir -p logs && yarn db:start && nohup npx supabase functions serve > logs/nohup.out 2>&1 &",
-    "edge:status": "echo 'Edge Runtime Status:' && (npx supabase status | grep 'edge_runtime') || echo 'Edge Functions are not running'",
-    "edge:logs": "tail -f logs/nohup.out",
-    "edge:stop": "pkill -f 'supabase functions serve' || echo 'No edge functions running'"
+    "edge:start": "npx supabase functions serve --env-file .env.local",
+    "edge:test": "npx vitest run supabase/functions/tests/"
   },
   "repository": {
     "type": "git",
